          Release Notes for NEdit Version 5.5, October 2004


$Id: ReleaseNotes,v 1.68 2010/07/05 06:23:59 lebert Exp $

This file contains last minute notes to users about the release, which are not
included in the documentation or README files included with the distribution
kits.  It also contains change information, for users who are interested in
what bugs have been fixed, and what features have been added in the current
version.

If you are upgrading NEdit from a version prior to 5.0, please see the notes in
the README file which came with the (source or executable) distribution kit,
about updating macros and font settings in your .nedit file.

New Features in $NEXT_VERSION

  - The macro variable $VERSION returns NEdit's version number.

  - The new macro function filename_dialog() can be used to query a file
    name from the user by using the usual file selection dialog.


Bugs fixed in $NEXT_VERSION

  - Fix raising of windows from within nedit (e.g. when opening an already
    opened document with nc). Patch is SF patch #2337783.

  - Fix for SF bug #2858723: off-by-one error causing a crash

  - Fix for SF bug #2687525: tipsfile parser error wrt to eof

  - Fix for SF bug #2222159: File was not reload when type was changed
    externaly

  - Fix for SF bug #2149312: parse error with zero menu entries.

  - Force a terminating \n on macro file load time, to prevent syntax errors
    with statements on the last line. (util/fileUtils.c:ReadMacroFile())
    (SF bug #2038921)

  - Fix multiple memory leaks in interpret.c:PromoteToGlobal()
    (SF bug #1894726)

  - Fix for SF bug #1908890: window title not updated.

  - Fix for SF bug #1730611: $match_syntax_based is not set.

  - Crash on window close when a "File modified externally" dialog was up
    (SF bug #1578869).

  - Crashes and artifacts when using ARGB visuals (SF bugs #1579544, 
    #1030467, #1030192, and #1458006).

  - The text insertion cursor does no longer blink while typing